--- a/app/src/main/res/layout/fragment_mission_details.xml
+++ b/app/src/main/res/layout/fragment_mission_details.xml
@@ -42,8 +42,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="45dp"
                 android:layout_marginTop="-30dp"
+
                 app:cardCornerRadius="30dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@android:color/white">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
