--- a/app/src/main/res/menu/bottom_nav_participant.xml
+++ b/app/src/main/res/menu/bottom_nav_participant.xml
@@ -3,16 +3,25 @@
         android:id="@+id/missionFragment"
         android:icon="@drawable/ic_mission"
         android:title="Missions" />
+
     <item
         android:id="@+id/mesDemandesFragment"
         android:icon="@drawable/ic_demande"
         android:title="Demandes" />
+
     <item
         android:id="@+id/pharmaChatFragment"
         android:icon="@drawable/ic_pharma"
         android:title="Assistant IA" />
-    <item
-        android:id="@+id/profileFragment"
 
+    <!-- ✅ ID IDENTIQUE AU NAV GRAPH -->
+    <item
+        android:id="@+id/participantProfileFragment"
+        android:icon="@drawable/ic_person"
         android:title="Profil" />
+    <item
+        android:id="@+id/action_logout"
+        android:icon="@drawable/ic_logout"
+        android:title="Déconnexion" />
+
 </menu>
