--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -14,21 +14,34 @@
         android:padding="12dp"
         android:background="@drawable/bubble_receiver">
 
+        <!-- Nom de l'expéditeur -->
         <TextView
-            android:id="@+id/textViewDate"
+            android:id="@+id/textViewSenderName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="11sp"
-            android:textColor="#777777"
-            android:layout_marginBottom="4dp"/>
+            android:textColor="#555555"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:layout_marginBottom="4dp"
+            android:text="Nom"/>
 
+        <!-- Message -->
         <TextView
             android:id="@+id/textViewMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@android:color/black"
-            android:maxWidth="260dp"/>
+            android:maxWidth="260dp"
+            android:layout_marginBottom="4dp"/>
+
+        <!-- Heure -->
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="11sp"
+            android:textColor="#777777"/>
     </LinearLayout>
 
 </LinearLayout>
